--- a/feudal-choices-backend/package.json
+++ b/feudal-choices-backend/package.json
@@ -12,6 +12,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "mongoose": "^5.7.1"
+    "http": "0.0.0",
+    "mongoose": "^5.7.1",
+    "socket.io": "^2.2.0"
   }
 }
